Stub and templates almost done

--- a/apps/pymwyfa_web/priv/app.config
+++ b/apps/pymwyfa_web/priv/app.config
@@ -22,13 +22,14 @@
             [
               {'_',
                 [
+                  {[], pymwyfa_web_resource, []},
                   {[<<"home">>], home_handler, []} 
                 ]
               }
             ]
           }]
         ]
-      },
+      }
     ]
   }
 ].
